--- a/VitalSings/Pages/AuthorizationPage.xaml
+++ b/VitalSings/Pages/AuthorizationPage.xaml
@@ -38,11 +38,20 @@
               Text="Пароль"/>
                     <PasswordBox
              x:Name="PasswordPb"/>
+                    <StackPanel Orientation="Horizontal">
+                        <CheckBox Name="CheckBoxRememberMe" 
+                                 VerticalAlignment="Center"
+                                 FontSize="24"
+                                 Margin="0,2,5,0"/>
+                        <TextBlock Text="Запомнить меня" 
+                                VerticalAlignment="Center"/>
+                    </StackPanel>
                     <Button
              x:Name="LoginBT"
              Click="LoginBT_Click"
              Content="Войти"
              Margin="0 10 0 10"/>
+                    
                     <StackPanel Orientation="Horizontal">
                         <TextBlock
                          Text="Уже есть аккаунт?"/>
