--- a/VitalSings/Windows/AddProductWindow.xaml
+++ b/VitalSings/Windows/AddProductWindow.xaml
@@ -18,6 +18,19 @@
             <ImageBrush ImageSource="\Resources\FonForApp.jpg"/>
         </Grid.Background>
 
+        <StackPanel>
+            <Button Content="X" Width="30" Height="30" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,0"
+                    Click="CloseButton_Click">
+                <Button.Template>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="#00a1ff" CornerRadius="20">
+                            <TextBlock Text="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"/>
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
+        </StackPanel>
+        
         <Border  Grid.Row="1" BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Center" Background="AliceBlue">
             <StackPanel Margin="10 10 10 10" VerticalAlignment="Center">
                 <StackPanel>
@@ -40,7 +53,7 @@
                                 Text="Калории: "/>
                         <TextBox
                                 Width="200"
-                                x:Name="CaloriesTB" TextChanged="CaloriesTB_TextChanged"/>
+                                x:Name="CaloriesTB"/>
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" Margin="0 10 0 0">
                         <TextBlock
