--- a/VitalSings/Windows/WaterIntakeWindow.xaml
+++ b/VitalSings/Windows/WaterIntakeWindow.xaml
@@ -8,17 +8,38 @@
         Title="WaterIntakeWindow" Height="450" Width="800"
         WindowStyle="None" WindowStartupLocation="CenterScreen">
     <Grid Background="#FFCBFDFF">
-                
-        <StackPanel VerticalAlignment="Center">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <StackPanel>
+            <Button Content="X" Width="30" Height="30" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,0"
+            Click="CloseButton_Click">
+                <Button.Template>
+                    <ControlTemplate TargetType="Button">
+                        <Border Background="#00a1ff" CornerRadius="20">
+                            <TextBlock Text="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White"/>
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
+        </StackPanel>
+
+        <StackPanel VerticalAlignment="Center" Grid.Row="1">
             <Image Source="/Resources/Water/KapLa.png"
                    Height="200"
                    Width="250"/>
             <TextBlock Text="Вода,мл"
                        Style="{StaticResource TitleTextStyle}"
                        HorizontalAlignment="Center"/>
-            <TextBlock
+            <TextBox
+                       FontSize="24"
+                       TextAlignment="Center"
                        x:Name="QuantityWaterTB"
-                       Style="{StaticResource TitleTextStyle}"
+                       TextChanged="CountTB_TextChanged"
+                       PreviewTextInput ="CountTB_PreviewTextInput"
+                       MinWidth="200"
                        HorizontalAlignment="Center"/>
             <StackPanel Orientation="Horizontal" 
                         HorizontalAlignment="Center"
